--- a/class-01-jquery-and-the-dom/pair-assignment/starter-code/index.html
+++ b/class-01-jquery-and-the-dom/pair-assignment/starter-code/index.html
@@ -42,7 +42,7 @@
     </footer>
 
     <!-- // TODO: Include any/all needed script tags -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='scripts/article.js'></script>
     <script src='scripts/blogArticles.js'></script>
   </body>
