Modify structure. I also just realized that I've been pushing this to the wrong origin.

--- a/class-01-jquery-and-the-dom/portfolio-assignment/index.html
+++ b/class-01-jquery-and-the-dom/portfolio-assignment/index.html
@@ -3,9 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Kevin Sulonen | Portfolio</title>
+  <link rel="stylesheet" href="vendor/css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+  <header>
+    <h1>Kevin Sulonen</h1>
+    <h3>Here are some of the projects I've worked on</h3>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/sulonen">About</a></li>
+      <li><a href="https://github.com/sulonen">GitHub</a></li>
+      <li><a href="https://twitter.com/sulonen">Twitter</a></li>
+      <li><a href="#projects">Projects</a></li>
+    </ul>
+  </nav>
+  <section id="projects">
+    <article>
+      <div>
+        <a href="http://www.google.com">
+          <h2>Title</h2>
+          <img src="img/google.png">
+        </a>
+        <p>Google Inc. is an American multinational technology company specializing
+          in Internet-related services and products. These include online advertising
+          technologies, search, cloud computing, and software.</p>
+      </div>
+    </article>
+  </section>
+  <footer></footer>
   <script src="vendor/js/jquery-2.1.4.min.js"></script>
 </body>
 </html>
