finished some stuff on articleView

--- a/class-02-jquery-and-events/pair-assignment/starter-codez/index.html
+++ b/class-02-jquery-and-events/pair-assignment/starter-codez/index.html
@@ -19,7 +19,7 @@
       <ul>
         <!-- TODO: Use one of the icons from the available set for each of these nav items... -->
         <li class="tab" data-content="articles"><a href="#"><i class="icon-home"></i> Home</a></li>
-        <li class="tab" data-content="about"><a href="#"><i class="icon-address-book"></i>About</a></li>
+        <li class="tab" data-content="about"><a href="#about"><i class="icon-address-book"></i>About</a></li>
         <li><a href="http://twitter.com/brookr" target="_blank"> <i class="icon-twitter3"></i> Twitter</a></li>
         <li><a href="http://github.com/brookr" target="_blank"><i class="icon-github"></i> GitHub</a></li>
       </ul>
@@ -57,7 +57,7 @@
           Welcome to my Blog
         </header>
         <section>
-          <h1>Some of my intrests:</h1>
+          <h1>Some of my interests:</h1>
           <ul>
             <li>Coding</li>
             <li>Sharing what I've learned</li>
