--- a/class-04-templates/lecture/examples/02-regex-expression.html
+++ b/class-04-templates/lecture/examples/02-regex-expression.html
@@ -7,21 +7,22 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js" charset="utf-8"></script>
 
   <script id="hello" type="text/template">
-    Hello {{0}}, my name is {{1}}, and I like {{2}}
+    Hello {{}}, my name is {{}}, and I like {{}} and {{}}
   </script>
 </head>
 <body>
   <div id="app"></div>
   <script>
     var compile = function(template, expressions) {
-      return appTemplate.replace(/{{(\d+)}}/g, swapper);
+      var i = 0;
+      return template.replace(/{{}}/g, swapper);
       // where
-      function swapper(match, number) {
-        return expressions[number];
+      function swapper(match) {
+        return expressions[i++];
       };
     };
     var appTemplate = $('#hello').html()
-    var compiledTemplate = compile(appTemplate, ["Students", "Ivan", "Apples"]);
+    var compiledTemplate = compile(appTemplate, ["Students", "Kyle", "bananas", 'programming']);
     $('#app').append(compiledTemplate);
   </script>
 
