second commit class-04

--- a/class-04-templates/lecture/examples/03-regex-expression-with-object.html
+++ b/class-04-templates/lecture/examples/03-regex-expression-with-object.html
@@ -7,7 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js" charset="utf-8"></script>
 
   <script id="hello" type="text/template">
-    Hello {{who}}, my name is {{name}}, and I like {{what}}
+    Hello {{who}}, my name is {{name}}, and I like {{what}}, {{fruit}} and {{likes}}.
   </script>
 </head>
 <body>
@@ -16,10 +16,13 @@
     var data = {
       who: "Students",
       name: "Ivan",
-      what: "Apples"
+      what: "apples",
+      me: "Kyle",
+      fruit: "bananas",
+      likes: "programming"
     };
     var compile = function(template, expressions) {
-      return appTemplate.replace(/{{([A-Za-z]+)}}/g, swapper);
+      return template.replace(/{{([A-Za-z]+)}}/g, swapper);
       // where
       function swapper(match, capture) {
         return expressions[capture];
