--- a/class-03-responsive-mobile-first/pair-assignment/starter-code/index.html
+++ b/class-03-responsive-mobile-first/pair-assignment/starter-code/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Blog</title>
-    <!-- TODO: Add a meta tag to properly set the viewport and initial scale -->
+    <!--  Add a meta tag to properly set the viewport and initial scale -->
     <link rel="stylesheet" href="vendor/styles/normalize.css">
     <link rel="stylesheet" href="styles/icons.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
+
   </head>
   <body>
     <header class="site-header clearfix">
@@ -20,6 +22,7 @@
       </section>
       <nav class="main-nav">
         <!-- TODO: Add a hamburger menu icon here. -->
+          <div class="icon-menu"></div>    
         <ul>
           <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
           <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
