--- a/class-03-responsive-mobile-first/pair-assignment/starter-code/index.html
+++ b/class-03-responsive-mobile-first/pair-assignment/starter-code/index.html
@@ -22,8 +22,8 @@
       </section>
       <nav class="main-nav">
         <!-- TODO: Add a hamburger menu icon here. -->
-          <div class="icon-menu"></div>    
-        <ul>
+          <img id='ham' src="ham.png">
+        <ul class='menu-items'>
           <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
           <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
           <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
@@ -81,5 +81,6 @@
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
+    <script src="scripts/menubar.js"></script>
   </body>
 </html>
