kinda works only loads one article

--- a/class-04-templates/pair-assignment/starter-code/index.html
+++ b/class-04-templates/pair-assignment/starter-code/index.html
@@ -65,6 +65,7 @@
             </li>
           </ul>
         </div>
+        <div class="content-placeholder"></div>
       </section>
       <section id="about" class="tab-content">
         <header>
