--- a/class-05-new-article-creation/lecture/starter-code/new.html
+++ b/class-05-new-article-creation/lecture/starter-code/new.html
@@ -91,7 +91,7 @@
     <script src="scripts/articleView.js"></script>
     <script>
       // DONE: Initialize page behaviors, and run code:
-      articleView.initIndexPage();
+      articleView.initNewArticlePage();
     </script>
   </body>
 </html>
