--- a/class-05-new-article-creation/lecture/starter-code/new.html
+++ b/class-05-new-article-creation/lecture/starter-code/new.html
@@ -39,8 +39,8 @@
       <nav class="main-nav">
         <div class="icon-menu"></div>
         <ul>
-          <li class="tab" data-content="write"><a href="#" class="icon-home"> Write</a></li>
-          <li class="tab" data-content="articles"><a href="#" class="icon-home"> Preview</a></li>
+          <li class="tab" id='write' data-content="write"><a href="#" class="icon-home"> Write</a></li>
+          <li class="tab" id='preview' data-content="articles"><a href="#" class="icon-home"> Preview</a></li>
         </ul>
       </nav>
     </header>
