--- a/class-07-functional-programming/pair-assignment/starter-code/admin.html
+++ b/class-07-functional-programming/pair-assignment/starter-code/admin.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/modules.css">
     </head>
-    <!-- TODO: Setup a template for each row of the Author Stats section of this page: -->
     <script id="author-template" type="text/x-handlebars-template">
       <li><strong>{{name}}</strong>: {{numWords}} words written</li>
     </script>
@@ -52,8 +51,7 @@
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script>
-      // TODO: After we fetch and load all the articles, what view function do we want to run next?
-      // Let's pass in a callback function, to determine what happens AFTER all articles are loaded.
+      Article.fetchAll(articleView.initAdminPage);
     </script>
   </body>
 </html>
