--- a/class-07-functional-programming/pair-assignment/starter-code/admin.html
+++ b/class-07-functional-programming/pair-assignment/starter-code/admin.html
@@ -38,7 +38,6 @@
         <h2>Author Stats</h2>
         <p><em>Details on who is writing, and how much writing they are doing...</em></p>
         <ul class="author-stats">
-          <!-- TODO: Use a handlebars template to fill in some stats for each author -->
         </ul>
       </section>
     </main>
@@ -46,10 +45,10 @@
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
 
-    <script src="/vendor/scripts/jquery-2.1.4.js"></script>
-    <script src="/vendor/scripts/handlebars.js"></script>
-    <script src="/scripts/article.js"></script>
-    <script src="/scripts/articleView.js"></script>
+    <script src="vendor/scripts/jquery-2.1.4.js"></script>
+    <script src="vendor/scripts/handlebars.js"></script>
+    <script src="scripts/article.js"></script>
+    <script src="scripts/articleView.js"></script>
     <script>
       Article.fetchAll(articleView.initAdminPage);
     </script>
